examples/avm-res-web-hostingenvironment/2.0.0/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# terraform-azurerm-avm-res-web-hostingenvironment

This is the web hosting environment (App Service Environment) resource module for the Azure Verified Modules library. This module deploys an App Service Environment (ASE). It leverages the AzAPI provider and sets a number of initial defaults to minimize the overall inputs for simple configurations.

> [!IMPORTANT]
> As the overall AVM framework is not GA (generally available) yet - the CI framework and test automation is not fully functional and implemented across all supported languages yet - breaking changes are expected, and additional customer feedback is yet to be gathered and incorporated. Hence, modules **WILL NOT** be published at version `1.0.0` or higher at this time.
>
> However, it is important to note that this **DOES NOT** mean that this module cannot be consumed and utilized. It **CAN** be leveraged in all types of environments (dev, test, prod etc.). Consumers can treat this just like any other IaC module and raise issues or feature requests against it as they learn from the usage of the module. Consumers should also read the release notes for each version, if considering updating to a more recent version of a module to see if there are any considerations or breaking changes etc.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (~> 1.9)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.4)

- <a name="requirement_modtm"></a> [modtm](#requirement\_modtm) (~> 0.3)

- <a name="requirement_random"></a> [random](#requirement\_random) (~> 3.6)

## Resources

The following resources are used by this module:

- [azapi_resource.diagnostic_setting](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.lock](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.role_assignment](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [modtm_telemetry.telemetry](https://registry.terraform.io/providers/azure/modtm/latest/docs/resources/telemetry) (resource)
- [random_uuid.telemetry](https://registry.terraform.io/providers/hashicorp/random/latest/docs/resources/uuid) (resource)
- [azapi_client_config.telemetry](https://registry.terraform.io/providers/Azure/azapi/latest/docs/data-sources/client_config) (data source)
- [modtm_module_source.telemetry](https://registry.terraform.io/providers/azure/modtm/latest/docs/data-sources/module_source) (data source)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_location"></a> [location](#input\_location)

Description: The Azure region where the App Service Environment (ASE) will be deployed.

Type: `string`

### <a name="input_name"></a> [name](#input\_name)

Description: The name of this resource.

Type: `string`

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The resource ID of the resource group where the App Service Environment (ASE) will be deployed.

Type: `string`

### <a name="input_subnet_id"></a> [subnet\_id](#input\_subnet\_id)

Description: The ID of the Subnet which the App Service Environment (ASE) should be connected to. The subnet must be delegated to Microsoft.Web/hostingEnvironments.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_allow_new_private_endpoint_connections"></a> [allow\_new\_private\_endpoint\_connections](#input\_allow\_new\_private\_endpoint\_connections)

Description: Enable new private endpoint connection creation on the App Service Environment (ASE). Defaults to true.

Type: `bool`

Default: `true`

### <a name="input_cluster_settings"></a> [cluster\_settings](#input\_cluster\_settings)

Description: Custom settings for changing the behavior of the App Service Environment (ASE). These settings are stored in the clusterSettings attribute of the hostingEnvironments Azure Resource Manager entity.

Type:

```hcl
list(object({
    name  = string
    value = string
  }))
```

Default: `[]`

### <a name="input_custom_dns_suffix_configuration"></a> [custom\_dns\_suffix\_configuration](#input\_custom\_dns\_suffix\_configuration)

Description:   Custom domain suffix configuration for the App Service Environment (ASE). The following properties can be specified:

  - `certificate_url` - (Required) The URL referencing the Azure Key Vault certificate secret that should be used as the default SSL/TLS certificate for sites with the custom domain suffix.
  - `dns_suffix` - (Required) The default custom domain suffix to use for all sites deployed on the ASE.
  - `key_vault_reference_identity` - (Optional) The user-assigned identity to use for resolving the key vault certificate reference. If not specified, the system-assigned ASE identity will be used if available.

Type:

```hcl
object({
    certificate_url              = string
    dns_suffix                   = string
    key_vault_reference_identity = optional(string, null)
  })
```

Default: `null`

### <a name="input_dedicated_host_count"></a> [dedicated\_host\_count](#input\_dedicated\_host\_count)

Description: Dedicated Host Count for the App Service Environment (ASE). Possible value is 2. Setting this value will make the ASE use dedicated hosts.

Type: `number`

Default: `null`

### <a name="input_diagnostic_settings"></a> [diagnostic\_settings](#input\_diagnostic\_settings)

Description:   A map of diagnostic settings to create on the App Service Environment (ASE). The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

  - `name` - (Optional) The name of the diagnostic setting. One will be generated if not set, however this will not be unique if you want to create multiple diagnostic setting resources.
  - `log_categories` - (Optional) A set of log categories to send to the log analytics workspace. Defaults to `[]`.
  - `log_groups` - (Optional) A set of log groups to send to the log analytics workspace. Defaults to `["allLogs"]`.
  - `metric_categories` - (Optional) A set of metric categories to send to the log analytics workspace. Defaults to `["AllMetrics"]`.
  - `log_analytics_destination_type` - (Optional) The destination type for the diagnostic setting. Possible values are `Dedicated` and `AzureDiagnostics`. Defaults to `Dedicated`.
  - `workspace_resource_id` - (Optional) The resource ID of the log analytics workspace to send logs and metrics to.
  - `storage_account_resource_id` - (Optional) The resource ID of the storage account to send logs and metrics to.
  - `event_hub_authorization_rule_resource_id` - (Optional) The resource ID of the event hub authorization rule to send logs and metrics to.
  - `event_hub_name` - (Optional) The name of the event hub. If none is specified, the default event hub will be selected.
  - `marketplace_partner_resource_id` - (Optional) The full ARM resource ID of the Marketplace resource to which you would like to send Diagnostic Logs.

Type:

```hcl
map(object({
    name = optional(string, null)
    logs = optional(set(object({
      category       = optional(string, null)
      category_group = optional(string, null)
      enabled        = optional(bool, true)
      retention_policy = optional(object({
        days    = optional(number, 0)
        enabled = optional(bool, false)
      }), {})
    })), [])
    metrics = optional(set(object({
      category = optional(string, null)
      enabled  = optional(bool, true)
      retention_policy = optional(object({
        days    = optional(number, 0)
        enabled = optional(bool, false)
      }), {})
    })), [])
    log_analytics_destination_type           = optional(string, "Dedicated")
    workspace_resource_id                    = optional(string, null)
    storage_account_resource_id              = optional(string, null)
    event_hub_authorization_rule_resource_id = optional(string, null)
    event_hub_name                           = optional(string, null)
    marketplace_partner_resource_id          = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_enable_telemetry"></a> [enable\_telemetry](#input\_enable\_telemetry)

Description: This variable controls whether or not telemetry is enabled for the module.  
For more information see <https://aka.ms/avm/telemetryinfo>.  
If it is set to false, then no telemetry will be collected.

Type: `bool`

Default: `true`

### <a name="input_fips_mode_enabled"></a> [fips\_mode\_enabled](#input\_fips\_mode\_enabled)

Description: Enable FIPS mode on the App Service Environment (ASE). Enabling this will enforce the use of FIPS compliant ciphers and protocols for Linux: https://learn.microsoft.com/en-us/azure/app-service/environment/app-service-app-service-environment-custom-settings#enable-fips-mode

Type: `bool`

Default: `false`

### <a name="input_front_end_tls_cipher_suite_order"></a> [front\_end\_tls\_cipher\_suite\_order](#input\_front\_end\_tls\_cipher\_suite\_order)

Description: The TLS cipher suite order to use on the App Service Environment (ASE). Refer to the docs for valid inputs: https://learn.microsoft.com/en-us/azure/app-service/environment/app-service-app-service-environment-custom-settings#change-tls-cipher-suite-order

Type: `string`

Default: `null`

### <a name="input_ftp_enabled"></a> [ftp\_enabled](#input\_ftp\_enabled)

Description: Enable FTP on the App Service Environment (ASE).

Type: `bool`

Default: `false`

### <a name="input_inbound_ip_address_override"></a> [inbound\_ip\_address\_override](#input\_inbound\_ip\_address\_override)

Description: Customer provided Inbound IP Address. Only able to be set on ASE create.

Type: `string`

Default: `null`

### <a name="input_internal_encryption_enabled"></a> [internal\_encryption\_enabled](#input\_internal\_encryption\_enabled)

Description: Enable internal Encryption: https://learn.microsoft.com/en-us/azure/app-service/environment/app-service-app-service-environment-custom-settings#enable-internal-encryption

Type: `bool`

Default: `true`

### <a name="input_internal_load_balancing_mode"></a> [internal\_load\_balancing\_mode](#input\_internal\_load\_balancing\_mode)

Description: Specifies which endpoints to serve internally in the Virtual Network for the App Service Environment (ASE). Possible values are 'None', 'Web', 'Publishing', or 'Web, Publishing'.

Type: `string`

Default: `"Web, Publishing"`

### <a name="input_lock"></a> [lock](#input\_lock)

Description:   Controls the Resource Lock configuration for this resource. The following properties can be specified:

  - `kind` - (Required) The type of lock. Possible values are `"CanNotDelete"` and `"ReadOnly"`.
  - `name` - (Optional) The name of the lock. If not specified, a name will be generated based on the `kind` value. Changing this forces the creation of a new resource.

Type:

```hcl
object({
    kind = string
    name = optional(string, null)
  })
```

Default: `null`

### <a name="input_managed_identities"></a> [managed\_identities](#input\_managed\_identities)

Description:   Controls the Managed Identity configuration on this resource. The following properties can be specified:

  - `system_assigned` - (Optional) Specifies if the System Assigned Managed Identity should be enabled. Defaults to `false`.
  - `user_assigned_resource_ids` - (Optional) Specifies a set of User Assigned Managed Identity resource IDs to be assigned to this resource.

Type:

```hcl
object({
    system_assigned            = optional(bool, false)
    user_assigned_resource_ids = optional(set(string), [])
  })
```

Default: `{}`

### <a name="input_remote_debug_enabled"></a> [remote\_debug\_enabled](#input\_remote\_debug\_enabled)

Description: Enable Remote Debug on the App Service Environment (ASE).

Type: `bool`

Default: `null`

### <a name="input_retry"></a> [retry](#input\_retry)

Description:   Retry configuration for transient errors. The following properties can be specified:

  - `error_message_regex` - (Optional) A list of regular expressions to match against error messages. If any match, the operation will be retried.
  - `interval_seconds` - (Optional) The initial interval in seconds between retries.
  - `max_interval_seconds` - (Optional) The maximum interval in seconds between retries.

Type:

```hcl
object({
    error_message_regex  = optional(list(string), ["ScopeLocked"])
    interval_seconds     = optional(number, null)
    max_interval_seconds = optional(number, null)
  })
```

Default: `{}`

### <a name="input_role_assignments"></a> [role\_assignments](#input\_role\_assignments)

Description:   A map of role assignments to create on the App Service Environment (ASE). The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

  - `role_definition_id_or_name` - The ID or name of the role definition to assign to the principal.
  - `principal_id` - The ID of the principal to assign the role to.
  - `description` - (Optional) The description of the role assignment.
  - `skip_service_principal_aad_check` - (Optional) If set to true, skips the Azure Active Directory check for the service principal in the tenant. Defaults to false.
  - `condition` - (Optional) The condition which will be used to scope the role assignment.
  - `condition_version` - (Optional) The version of the condition syntax. Leave as `null` if you are not using a condition, if you are then valid values are '2.0'.
  - `delegated_managed_identity_resource_id` - (Optional) The delegated Azure Resource Id which contains a Managed Identity. Changing this forces a new resource to be created. This field is only used in cross-tenant scenario.
  - `principal_type` - (Optional) The type of the `principal_id`. Possible values are `User`, `Group` and `ServicePrincipal`. It is necessary to explicitly set this attribute when creating role assignments if the principal creating the assignment is constrained by ABAC rules that filters on the PrincipalType attribute.

  > Note: only set `skip_service_principal_aad_check` to true if you are assigning a role to a service principal.

Type:

```hcl
map(object({
    role_definition_id_or_name             = string
    principal_id                           = string
    description                            = optional(string, null)
    skip_service_principal_aad_check       = optional(bool, false)
    condition                              = optional(string, null)
    condition_version                      = optional(string, null)
    delegated_managed_identity_resource_id = optional(string, null)
    principal_type                         = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_tags"></a> [tags](#input\_tags)

Description: (Optional) Tags of the resource.

Type: `map(string)`

Default: `null`

### <a name="input_timeouts"></a> [timeouts](#input\_timeouts)

Description:   Timeouts for resource operations. App Service Environments (ASE) can take a long time to create and update.

  - `create` - (Optional) The timeout for create operations. Defaults to '6h'.
  - `delete` - (Optional) The timeout for delete operations. Defaults to '6h'.
  - `read` - (Optional) The timeout for read operations. Defaults to '5m'.
  - `update` - (Optional) The timeout for update operations. Defaults to '6h'.

Type:

```hcl
object({
    create = optional(string, "6h")
    delete = optional(string, "6h")
    read   = optional(string, "5m")
    update = optional(string, "6h")
  })
```

Default: `{}`

### <a name="input_tls_1_enabled"></a> [tls\_1\_enabled](#input\_tls\_1\_enabled)

Description: Enable TLS 1.0 on the App Service Environment (ASE): https://learn.microsoft.com/en-us/azure/app-service/environment/app-service-app-service-environment-custom-settings#disable-tls-10-and-tls-11

Type: `bool`

Default: `false`

### <a name="input_upgrade_preference"></a> [upgrade\_preference](#input\_upgrade\_preference)

Description: Upgrade Preference. Possible values are 'None', 'Early', 'Late', or 'Manual'.

Type: `string`

Default: `"None"`

### <a name="input_zone_redundancy_enabled"></a> [zone\_redundancy\_enabled](#input\_zone\_redundancy\_enabled)

Description: Specifies if the App Service Environment (ASE) is zone redundant. Defaults to true. Zonal ASEs can only be deployed in some regions.

Type: `bool`

Default: `true`

## Outputs

The following outputs are exported:

### <a name="output_dns_suffix"></a> [dns\_suffix](#output\_dns\_suffix)

Description: The DNS suffix of the App Service Environment (ASE).

### <a name="output_external_inbound_ip_addresses"></a> [external\_inbound\_ip\_addresses](#output\_external\_inbound\_ip\_addresses)

Description: The external inbound IP addresses of the App Service Environment (ASE).

### <a name="output_internal_inbound_ip_addresses"></a> [internal\_inbound\_ip\_addresses](#output\_internal\_inbound\_ip\_addresses)

Description: The internal inbound IP addresses of the App Service Environment (ASE).

### <a name="output_linux_outbound_ip_addresses"></a> [linux\_outbound\_ip\_addresses](#output\_linux\_outbound\_ip\_addresses)

Description: The Linux outbound IP addresses of the App Service Environment (ASE).

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the App Service Environment (ASE).

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the App Service Environment (ASE).

### <a name="output_system_assigned_managed_identity_principal_id"></a> [system\_assigned\_managed\_identity\_principal\_id](#output\_system\_assigned\_managed\_identity\_principal\_id)

Description: The principal ID of the system-assigned managed identity.

### <a name="output_windows_outbound_ip_addresses"></a> [windows\_outbound\_ip\_addresses](#output\_windows\_outbound\_ip\_addresses)

Description: The Windows outbound IP addresses of the App Service Environment (ASE).

## Modules

The following Modules are called:

### <a name="module_avm_interfaces"></a> [avm\_interfaces](#module\_avm\_interfaces)

Source: Azure/avm-utl-interfaces/azure

Version: 0.5.0

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
